[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_scene_select.gd" type="Script" id=1]

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -87.0
margin_right = 128.0
margin_bottom = 87.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
text = "Select a demo:"
align = 1

[node name="KeyboardAndMouseInputSceneButton" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 256.0
margin_bottom = 62.0
rect_min_size = Vector2( 256, 40 )
text = "Keyboard & Mouse"

[node name="GamepadInputSceneButton" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 256.0
margin_bottom = 110.0
rect_min_size = Vector2( 256, 40 )
text = "Gamepad"

[node name="TouchInputSceneButton" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 256.0
margin_bottom = 158.0
rect_min_size = Vector2( 256, 40 )
text = "Touch"

[node name="GyroAndAccelerometerInputSceneButton" type="Button" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 256.0
margin_bottom = 206.0
rect_min_size = Vector2( 256, 40 )
text = "Gryo & Accelerometer"
[connection signal="pressed" from="VBoxContainer/KeyboardAndMouseInputSceneButton" to="." method="_on_KeyboardAndMouseInputSceneButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GamepadInputSceneButton" to="." method="_on_GamepadInputSceneButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TouchInputSceneButton" to="." method="_on_TouchInputSceneButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GyroAndAccelerometerInputSceneButton" to="." method="_on_GyroAndAccelerometerInputSceneButton_pressed"]
